fix: blog date and title spacing

--- a/styles/DevTips.module.css
+++ b/styles/DevTips.module.css
@@ -47,7 +47,7 @@
 
 .devTipsList div span {
   color: #888;
-  min-width: 8rem;
+  min-width: 7.4rem;
   white-space: nowrap;
   font-weight: 700;
 }
